# contextflame

./: .gitignore  README.md  pyproject.toml
src/contextflame/: __init__.py  attributor.py  cli.py  flamegraph.py  metrics.py  proxy.py  rawproxy.py  storage.py
src/contextflame/templates/: flamegraph.html
tests/: test_attributor.py
