[project]
name = "contextflame"
version = "0.1.0"
description = "Context profiling tool for Claude Code sessions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "uvicorn>=0.34",
    "starlette>=0.45",
    "click>=8.1",
]

[dependency-groups]
dev = ["pytest>=9.0"]

[project.scripts]
contextflame = "contextflame.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contextflame"]
