[project]
name = "contextflame"
version = "0.2.6"
description = "Context profiling tool for Claude Code sessions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.27",
    "uvicorn>=0.34",
    "starlette>=0.45",
    "click>=8.1",
    "tiktoken>=0.7",
]

[dependency-groups]
dev = ["pytest>=9.0"]

[project.scripts]
contextflame = "contextflame.cli:main"
cf = "contextflame.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contextflame"]
